--- a/style.css
+++ b/style.css
@@ -1237,6 +1237,32 @@ h3 {
 
 
 /* Tryouts */
+@media (max-width: 1000px) {
+    .tryout-info-wrapper {
+        flex-direction: column;
+        padding: 50px 20px;
+        min-width: auto; height: auto;
+        background-size: cover;
+    }
+    .tryout-text-box {
+        max-width: 100%;
+        padding: 15px;
+        min-height: auto;
+    }
+    #page-header {
+        padding: 20px;
+    }
+    .tryout-heading {
+        font-size: 1.4rem;
+    }
+    .tryout-description {
+        font-size: 1rem;
+    }
+    .tryout-image {
+        max-width: 100%; height: 50%;
+        margin-top: 20px;
+    }
+}
 @media (max-width: 750px) {
     .tryout-info-wrapper {
         flex-direction: column;
