--- a/style.css
+++ b/style.css
@@ -856,6 +856,41 @@ a.requirement-link{
 }
 }
 
+@media (max-width: 900px) {
+    .navbar {
+        display: flex; position: fixed; flex-direction: column; align-items: flex-start;
+        padding: 10px 20px;
+    }
+    .navbar img {
+        height: 120px; width: auto;
+        margin-bottom: 10px;
+    }
+    .navbar ul {
+        display: flex; flex-direction: row; justify-content: flex-end;
+        width: 100%;
+        margin-top: 0;
+    }
+    .navbar li {
+        margin-left: 15px;
+    }
+    .navbar a {
+        display: inline-block; text-align: center;
+        padding: 10px;
+    }
+    .navbar ul li ul.dropdown {
+        display: none; position: absolute;
+        top: 100%; left: 40%; 
+        padding: 0; margin-top: 0;
+        min-width: 120px;
+        transform: translateX(-50%);
+        background-color: rgb(153, 0, 0);
+        text-align: center;
+    }
+    .navbar ul li:hover ul.dropdown {
+        display: block; 
+    }
+}
+
 @media (max-width: 750px) {
 .navbar {
     display: flex; position: fixed; flex-direction: column; align-items: flex-start;
@@ -891,7 +926,7 @@ a.requirement-link{
 }
 }
 
-@media (max-width: 540px) { 
+@media (max-width: 600px) { 
 .navbar {
     display: flex; position: fixed; flex-direction: column; align-items: flex-start;
     padding: 10px 20px;
@@ -1088,6 +1123,9 @@ h1 {
 .roster-heading {
     display: flex; flex-wrap: wrap;
 }
+.bulletin{
+padding: 50px 30px; margin: 50px auto; max-width: 500px;
+}
 }
 @media (max-width: 600px) { 
 .homepage-pic{
@@ -1127,6 +1165,9 @@ h1 {
 }
 .roster-heading {
     display: flex; flex-wrap: wrap;
+}
+.bulletin{
+    padding: 40px 30px; margin: 50px auto; max-width: 500px;
 }
 }
 @media (max-width: 405px) {
@@ -1180,6 +1221,9 @@ h3 {
 .roster-heading {
     display: flex; flex-wrap: wrap;
 }
+.bulletin{
+    padding: 40px 30px; margin: 50px auto; max-width: 350px;
+}
 }
 @media (max-width: 350px) {
 .homepage-pic{
@@ -1232,6 +1276,9 @@ h3 {
 .roster-heading {
     display: flex; flex-wrap: wrap;
 }
+.bulletin{
+    padding: 30px 25px; margin: 50px auto; max-width: 270px;
+}
 }
 
 
@@ -1259,7 +1306,7 @@ h3 {
         font-size: 1rem;
     }
     .tryout-image {
-        max-width: 100%; height: 50%;
+        max-width: 600px; max-height: auto;
         margin-top: 20px;
     }
 }
@@ -1285,7 +1332,7 @@ h3 {
         font-size: 1rem;
     }
     .tryout-image {
-        max-width: 100%; height: 50%;
+        max-width: 400px; max-height: auto;
         margin-top: 20px;
     }
     .requirements-flex-container {
@@ -1390,7 +1437,7 @@ h3 {
         font-size: 1rem;
     }
     .tryout-image {
-        max-width: 100%; height: 50%;
+        max-width: 350px; max-height: auto;
         margin-top: 20px;
     }
     .requirements-flex-container {
@@ -1496,7 +1543,7 @@ h3 {
     font-size: 1rem;
 }
 .tryout-image {
-    max-width: 100%; height: 50%;
+    max-width: 250px; max-height: auto;
     margin-top: 20px; display: contain;
 }
 .requirements-flex-container {
